differential_testing/gcc_regression/gcc_reg_cb/results/gcc540/save_st/pr61553.c-5.4.0-1.out.txt
pr61553.c: In function ‘foo’:
pr61553.c:7:3: error: size mismatch in argument 2 of ‘__atomic_store’
   __atomic_store (s, (void *) 0, __ATOMIC_SEQ_CST);  
   ^
